[gd_scene load_steps=11 format=3 uid="uid://c7ps5o4l11dip"]

[ext_resource type="Script" uid="uid://cuicl455b1xd" path="res://scenes/clicking/clicker_handler.gd" id="1_q6c4a"]
[ext_resource type="FontFile" uid="uid://bu2sqh8xfsngc" path="res://assets/fonts/PixelifySans-VariableFont_wght.ttf" id="3_ig5bt"]
[ext_resource type="PackedScene" uid="uid://ovudvf25j22i" path="res://gui/scenes/score.tscn" id="3_q6c4a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ecl7i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ii1nm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7obxr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tph31"]

[sub_resource type="Animation" id="Animation_0e4xk"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background/rect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.365357, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("background/rect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.425312, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("background/rect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.350992, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("background/rect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_q6c4a"]
resource_name = "rgb_background"
length = 10.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("background/rect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.365357, -0.25, 0, 0.25, 0, 0.270349, -0.25, 0, 0.25, 0, 0.481058, -0.25, 0, 0.25, 0, 0.520466, -0.25, 0, 0.25, 0, 0.420666, -0.25, 0, 0.25, 0, 0.365357, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 4, 6, 8, 10)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("background/rect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.425312, -0.25, 0, 0.25, 0, 0.426137, -0.25, 0, 0.25, 0, 0.352739, -0.25, 0, 0.25, 0, 0.359616, -0.25, 0, 0.25, 0, 0.415271, -0.25, 0, 0.25, 0, 0.425312, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 4, 6, 8, 10)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("background/rect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.350992, -0.25, 0, 0.25, 0, 0.523261, -0.25, 0, 0.25, 0, 0.492853, -0.25, 0, 0.25, 0, 0.315307, -0.25, 0, 0.25, 0, 0.246874, -0.25, 0, 0.25, 0, 0.350992, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 4, 6, 8, 10)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("background/rect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 2, 4, 6, 8, 10)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ig5bt"]
_data = {
&"RESET": SubResource("Animation_0e4xk"),
&"rgb_background": SubResource("Animation_q6c4a")
}

[node name="clicker" type="Node2D"]
script = ExtResource("1_q6c4a")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="background" type="CanvasLayer" parent="."]

[node name="rect" type="ColorRect" parent="background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.365357, 0.425312, 0.350992, 1)

[node name="button" type="Button" parent="background"]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("3_ig5bt")
theme_override_font_sizes/font_size = 90
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_ecl7i")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ii1nm")
theme_override_styles/hover = SubResource("StyleBoxEmpty_7obxr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_tph31")
text = "Click Me!"
metadata/_edit_use_anchors_ = true

[node name="open_store" type="Button" parent="background"]
top_level = true
z_index = 99
anchors_preset = -1
anchor_left = 0.00625
anchor_top = 0.856481
anchor_right = 0.141667
anchor_bottom = 0.989815
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Open Store
"
metadata/_edit_use_anchors_ = true

[node name="quit" type="Button" parent="background"]
top_level = true
z_index = 99
anchors_preset = -1
anchor_left = 0.895312
anchor_top = 0.938889
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Quit Game"
metadata/_edit_use_anchors_ = true

[node name="gui" parent="." instance=ExtResource("3_q6c4a")]

[node name="score" parent="gui" index="0"]
anchors_preset = -1
anchor_left = 0.363542
anchor_top = 0.452778
anchor_right = 0.636458
anchor_bottom = 0.547222
offset_left = 0.0
offset_top = 0.0
offset_right = 0.0
offset_bottom = 0.0
size_flags_horizontal = 8
size_flags_vertical = 6
metadata/_edit_use_anchors_ = true

[node name="background_anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_ig5bt")
}

[connection signal="pressed" from="background/button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="background/open_store" to="." method="_on_open_store_pressed"]
[connection signal="pressed" from="background/quit" to="." method="_on_quit_pressed"]

[editable path="gui"]
